1做完了资讯后台的增删改查 2 集成了quartz定时任务

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,9 @@ spring:
 mybatis:
   mapper-locations: classpath:mybatis/mapper/*.xml
   type-aliases-package: com.wanghuan.model
+
+logging:
+  level:
+    com:
+      wanghuan:
+        dao: debug
